--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -14,7 +14,7 @@
 
   <link rel="icon" type="image/x-icon" href="./images/slack-icon.png">
   <title>Slack is your digital HQ | Slack</title>
-</head>
+</head> 
 
 <body>
   <!-- NAVBAR -->
@@ -22,7 +22,7 @@
     <div>
       <img src="./images/slack-logo.png" alt="Slack logo" />
 
-      <ul>
+      <ul class="nav-text-options">
         <li>
           <a href="#">Product</a>
         </li>
@@ -38,7 +38,7 @@
       </ul>
     </div>
 
-    <div>
+    <div class="nav-btns">
       <button>
         <img src="./images/icon-search.png" alt="Search icon">
       </button>
@@ -47,7 +47,7 @@
         <img src="./images/icon-menu.png" alt="Menu icon">
       </button>
 
-      <ul hidden>
+      <ul hidden class ="login-elements">
         <li>
           <a href="#">Sign in</a>
         </li>
@@ -61,32 +61,34 @@
 
   <!-- HEADER -->
   <header>
-    <div>
+    <div class="saying-container">
       <h1>Great teamwork starts with a digital HQ</h1>
 
-      <p>Slack is free to try for as long as you'd like.</p>
+      <p>
+        <span class= "highlight-text">Slack is free to try</span> for as long as you'd like.</p>
 
-      <div>
-        <button>Sign up with email</button>
+      <div class="sign-up-buttons">
+        <button style="color:purple; justify-content:center;">Sign up with email</button>
 
-        <button>
+        <button style="background-color:blue; color: white">
           <img src="./images/logo-google.png" alt="Google logo" />
           <span>Sign up with Google</span>
+          <span class="transparent-span"></span>
         </button>
       </div>
 
     </div>
 
     <div>
-      <img src="./images/hero-product-ui.png" alt="Slack app screenshot" />
+      <img src="./images/hero-product-ui.png" alt="Slack app screenshot" class="slack-app-image" />
     </div>
   </header>
 
   <main>
-    <section>
-      <p>Trusted by companies all over the world</p>
+    <section class = "logo-section">
+      <p id="uppercase-p">Trusted by companies all over the world</p>
 
-      <div>
+      <div class="logo-collection-container">
         <img src="./images/logo-airbnb.png" alt="Airbnb logo" />
         <img src="./images/logo-nasa.png" alt="NASA logo" />
         <img src="./images/logo-uber.png" alt="Uber logo" />
@@ -97,10 +99,11 @@
 
     </section>
 
-    <section>
-      <h3>Teams large and small rely on Slack</h3>
-      <p>Slack securely scales up to support collaboration at the world’s biggest companies.</p>
-
+    <section id ="reference-section">
+      <div id="reference-header">
+        <h3>Teams large and small rely on Slack</h3>
+        <p>Slack securely scales up to support collaboration at the world’s biggest companies.</p>
+      </div>
 
       <ul>
         <li>
@@ -122,14 +125,14 @@
         <li>
           <p><span>88%</span></p>
           <p>
-            feel more connected to their teams*
+            feel more connected to their teams
             <sup>*</sup>
           </p>
         </li>
       </ul>
     </section>
 
-    <section>
+    <section class="call-to-action-section">
       <h3>Welcome to your new digital HQ</h3>
 
       <button>Try for free</button>
